@@ -1,5 +1,6 @@
 1.1.2 to 1.1.3
 ----------------------------------------------------------------------
+- Fixed issue with custom notification rules being erased. Bug 754
 - Fixed Asset Import issues. Thx Jonathan. Bug 700
 - Added support for centos3 (RHES 3) for rpm builds. Bug 801
 - Added response time info to JDBS poller. Bug 830
